PIG-3925: Port more mini cluster tests to Tez - part 4 (rohini)
git-svn-id: https://svn.apache.org/repos/asf/pig/branches/tez@1595262 13f79535-47bb-0310-9956-ffa450edef68